# contriburg

./: .gitignore  AGENTS.md  KDESTOREPAGE.md  README.md  TODO.md  build.sh  metadata.json
.github/workflows/: windows-installer.yml
contents/config/: config.qml  main.xml
contents/ui/: ConfigGeneral.qml  DataFetcher.js  Scene3D.qml  main.qml
standalone/: CMakeLists.txt  Main.qml  README.md  SettingsWindow.qml  main.cpp
tests/: CMakeLists.txt  README.md  run_tests.sh  tst_datafetcher.qml  tst_scene3d.qml
tools/: README.md  grab_screenshot.qml
